fix: last fixes to js, making sure functions arent too long

--- a/style.css
+++ b/style.css
@@ -14,20 +14,43 @@ header {
   justify-content: space-between;
 
   background-color: rgba(231, 108, 31, 0.9);
-  height: 120px;
+  height: 100px;
   z-index: 1;
 }
 
+header nav {
+  display: flex;
+  gap: 48px;
+}
+
+header img {
+  padding-left: 48px;
+  padding-right: 48px;
+}
+
 .start {
-  height: 100dvh;
+  height: min(100dvh, 1000px);
 }
 
 main {
   position: relative;
+  flex: 1;
+}
+
+main .salad-section {
+  /* flex: 1; */
 }
 
 .hero {
   height: 650px;
+}
+
+.hero {
+  height: 650px;
+  margin: var(--padding-content);
+
+  /* height: 100%; */
+  /* object-fit: contain; */
   background-image: url(./assets/img/hero.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -80,9 +103,14 @@ main {
 }
 
 footer {
+  /* position: absolute;
+  bottom: 0;
+  top: 100%; */
+  /* left: 0; */
   display: flex;
   justify-content: center;
   align-items: center;
+  /* align-self: flex-end; */
   gap: 100px;
   height: 120px;
   background-color: var(--orange);
