--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -99,6 +99,15 @@ body {
   color: var(--grey-dark);
 }
 
+header nav a {
+  color: white;
+  font-size: 24px;
+}
+
+header nav a:hover {
+  text-decoration: underline;
+}
+
 button {
   font-family: "Palanquin";
 }
